# xz

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/2020-01-05-103220_create_links/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
templates/: base.html.tera  list.html.tera  new.html.tera
